--- a/pocs/safeerGroup/src/style.css
+++ b/pocs/safeerGroup/src/style.css
@@ -285,3 +285,5 @@ body {
 
 .dash-header { height: 64px !important; }
 .header-logo-pill img { height: 20px; }
+
+.header-title { text-align: left !important; }
