--- a/pocs/usPolo/src/style.css
+++ b/pocs/usPolo/src/style.css
@@ -1043,3 +1043,5 @@ html, body {
 
 .dash-header { height: 64px !important; }
 .header-logo-pill img { height: 20px; }
+
+.header-title { text-align: left !important; }
